# RevengeOfThePotatoes

./: .gitignore  README.md
RevengeOfThePotatoes/: RevengeOfThePotatoes.uproject
RevengeOfThePotatoes/Config/: DefaultEngine.ini  DefaultGame.ini
RevengeOfThePotatoes/Content/Blueprints/: BP_StaticCamera.uasset
RevengeOfThePotatoes/Content/Game/: BP_StaticCamera.uasset  MainLevel.umap
RevengeOfThePotatoes/Content/Game/AnimationsFiles/: FB_Idle.uasset  FB_Walk.uasset  FP_Walk.uasset  potato1-walk.uasset  potato1.uasset
RevengeOfThePotatoes/Content/Game/Blueprints/: BP_Character.uasset  BP_GameMode.uasset  BP_PlayerAnimSource.uasset  BP_PlayerAnimation.uasset  BP_PlayerController.uasset  BP_SpawnPoint.uasset  BP_StaticCamera.uasset  BP_ThirdPersonCharacter.uasset  BP_ThirdPersonGameMode.uasset  TwitchChatSample.uasset  TwitchEventSample.uasset
RevengeOfThePotatoes/Content/Game/Blueprints/AnimSequences/: AS_Idle.uasset  AS_Walk.uasset
RevengeOfThePotatoes/Content/Game/Blueprints/Input/: IA_Walk.uasset  IMC_Input.uasset
RevengeOfThePotatoes/Content/Game/Blueprints/Wave/: DT_WaveInfo.uasset  S_WaveInfo.uasset
RevengeOfThePotatoes/Content/Game/Characters/: BPC_CarrotCharacter.uasset  BPC_PotatoCharacter.uasset  BP_AICharacter.uasset  BP_AIPotatoController.uasset  E_CharacterType.uasset
RevengeOfThePotatoes/Content/Game/Characters/Animation/: BP_AIAnimSource.uasset  BP_CarrotAnimation.uasset  BP_PotatoAnimation.uasset
RevengeOfThePotatoes/Content/Game/Input/: IMC_Default.uasset
RevengeOfThePotatoes/Content/Game/Input/Actions/: IA_Jump.uasset  IA_Look.uasset  IA_Move.uasset
RevengeOfThePotatoes/Content/Game/Maps/: Main.umap  TestLevel.umap  TestLevel_HLOD0_Instancing.uasset
RevengeOfThePotatoes/Content/Game/Maps/Main_sharedassets/: Biom_4_Gravel_LayerInfo.uasset  Grass.uasset  Gravel_LayerInfo.uasset  Stone_LayerInfo.uasset
RevengeOfThePotatoes/Content/Maps/: MainMap.umap
RevengeOfThePotatoes/Content/StarterContent/Architecture/: Floor_400x400.uasset  Wall_Door_400x400.uasset
RevengeOfThePotatoes/Content/StarterContent/Audio/: Collapse01.uasset
RevengeOfThePotatoes/Content/StarterContent/Shapes/: Shape_Wedge_A.uasset
RevengeOfThePotatoes/Content/ThirdPerson/Blueprints/: BP_ThirdPersonCharacter.uasset
RevengeOfThePotatoes/Content/ThirdPerson/Input/: IMC_Default.uasset
RevengeOfThePotatoes/Content/ThirdPerson/Input/Actions/: IA_Pause.uasset
RevengeOfThePotatoes/Plugins/TwitchSDK/: TwitchSDK.uplugin
RevengeOfThePotatoes/Plugins/TwitchSDK/core/: .gitignore  CMakeLists.txt  Doxyfile.in
RevengeOfThePotatoes/Plugins/TwitchSDK/core/docs/: corelib-basics.md  eventsub-basics.md  eventsubproxy.md  gametask.md  mainpage.md  oauth.md  unity.md  unity_example.md  unreal.md
RevengeOfThePotatoes/Plugins/TwitchSDK/core/include/: pal.hpp  pal_autogenerated.hpp  r66.hpp  r66_strings.hpp  r66_structs_autogenerated.hpp  r66api_autogenerated.hpp
RevengeOfThePotatoes/Plugins/TwitchSDK/core/src/: c_api.cpp  c_api.hpp  c_api_autogenerated.cpp  c_api_autogenerated.hpp  marshalling.cpp  marshalling.hpp  marshalling_autogenerated.hpp  pal_autogenerated.cpp  pal_proxy.cpp  r66.cpp  r66_auth.cpp  r66_channelpoints.cpp  r66_es.cpp  r66_impl.hpp  r66_json.hpp  r66_misc.cpp  r66_polls.cpp  r66_predictions.cpp  r66_streaminfo.cpp  r66_tasks.hpp  r66_userinfo.cpp  r66_websockets.hpp  strings.cpp  urlencode.cpp  urlencode.hpp  version.cpp.in
(+259 files in other folders)
